tests/baselines/reference/ES5For-of29.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of29.ts(1,13): error TS2459: Type 'number' has no property 'x' and no string index signature.
tests/cases/conformance/statements/for-ofStatements/ES5For-of29.ts(1,23): error TS2459: Type 'number' has no property 'y' and no string index signature.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of29.ts (2 errors) ====
    for (const {x: a = 0, y: b = 1} of [2, 3]) {
                ~
!!! error TS2459: Type 'number' has no property 'x' and no string index signature.
                          ~
!!! error TS2459: Type 'number' has no property 'y' and no string index signature.
        a;
        b;
    }